arreglado test nico